--- a/index.html
+++ b/index.html
@@ -9,53 +9,38 @@
 <body>
   <form>
     <button id="FileReader">Save PDF for iOS + every other browser</button>
-    <button id="createObjectURL">Save PDF for Chrome</button>
   </form>
   <script>
     'use strict'
 
-    document.getElementById('FileReader').onclick = run('FileReader')
-    document.getElementById('createObjectURL').onclick = run('createObjectURL')
+    document.getElementById('FileReader').onclick = run()
 
-    function run (type) {
-      return event => {
-        event.preventDefault()
+    function run (event) {
+      event.preventDefault()
 
-        fetch('http://localhost:9000/example.pdf', {
-          method: 'get',
-        })
-        .then(response => response.blob())
-        .then(blob => {
-          const fileName = 'example.pdf'
-          const reader = new FileReader()
+      fetch('http://localhost:9000/example.pdf', {
+        method: 'get',
+      })
+      .then(response => response.blob())
+      .then(blob => {
+        const fileName = 'example.pdf'
+        const reader = new FileReader()
 
-          reader.onloadend = () => {
-            const a = document.createElement("a")
-            let objectUrl
+        reader.onloadend = () => {
+          const a = document.createElement("a")
 
-            if (type === 'createObjectURL') {
-              objectUrl = window.URL.createObjectURL(blob)
-              a.href = objectUrl
-            } else {
-              a.href = reader.result
-            }
+          a.href = reader.result
+          a.style.display = 'none'
+          a.download = fileName
 
-            a.style.display = 'none'
-            a.download = fileName
+          document.body.appendChild(a)
+          a.click()
 
-            document.body.appendChild(a)
-            a.click()
+          a.parentNode.removeChild(a)
+        }
 
-            if (type === 'createObjectURL') {
-              window.URL.revokeObjectURL(objectUrl)
-            }
-
-            a.parentNode.removeChild(a)
-          }
-
-          reader.readAsDataURL(blob)
-        })
-      }
+        reader.readAsDataURL(blob)
+      })
     }
   </script>
 </body>
