--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script>
     'use strict'
 
-    document.getElementById('FileReader').onclick = run()
+    document.getElementById('FileReader').onclick = run
 
     function run (event) {
       event.preventDefault()
