--- a/index.html
+++ b/index.html
@@ -4,80 +4,88 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Chrome FileReader Network Error</title>
+  <title>Cross-browser File Download</title>
 </head>
 <body>
-  <form>
-    <label>utf8.pdf
-      <input type="radio" name="fileName" value="utf8.pdf" checked>
+  <h1>Cross-browser File Download</h1>
+  <form class="download">
+    <label>lyreco.3.9MB.pdf
+      <input type="radio" name="fileName" class="download--filename" value="lyreco.3.9MB.pdf" checked>
     </label>
-    <label>example.pdf
-      <input type="radio" name="fileName" value="example.pdf">
+    <label>example.48K.pdf
+      <input type="radio" name="fileName" class="download--filename" value="example.48K.pdf">
     </label>
 
     <hr>
 
-    <button id="readAsDataURL">Save PDF - readAsDataURL (Safari iOS + Firefox)</button>
-    <button id="createObjectURL">Save PDF - createObjectURL (Chrome + Firefox)</button>
-    <button id="readAsText">Save PDF - readAsText (None)</button>
+    <input type="submit" class="download--button" value="Save PDF">
   </form>
+
+  <script src="node_modules/axios/dist/axios.min.js"></script>
   <script>
     'use strict'
 
-    document.getElementById('readAsDataURL').onclick = run('readAsDataURL')
-    document.getElementById('createObjectURL').onclick = run('createObjectURL')
-    document.getElementById('readAsText').onclick = run('readAsText')
+    const form = document.querySelector('.download')
 
-    function run (type) {
-      return event => {
-        event.preventDefault()
-        const fileName = document.querySelector('input:checked').value
+    const submitHandler = partial(handler, downloadFile, form)
 
-        fetch(fileName, {
-          method: 'get',
-        })
-        .then(response => response.blob())
-        .then(blob => {
+    const getBlob = partial(dot, 'data')
 
-          if (navigator.msSaveBlob) { // IE11 and Edge 17-
-            navigator.msSaveBlob(blob, fileName)
-          } else { // every other browser
-            const reader = new FileReader()
-            reader.onloadend = () => {
-              let url
+    form.addEventListener('submit', submitHandler)
 
-              switch (type) {
-                case 'createObjectURL':
-                  url = window.URL.createObjectURL(blob)
-                  break
-                case 'readAsDataURL':
-                default:
-                  url = reader.result;
-              }
-
-              download(url, fileName)
-
-              if (type === 'createObjectURL') {
-                window.URL.revokeObjectURL(url)
-              }
-            }
-
-            if (type === 'readAsText') {
-              reader.readAsText(blob)
-            } else {
-              reader.readAsDataURL(blob)
-            }
-          }
-        })
-      }
+    function handler (f, form, event) {
+      event.preventDefault()
+      f(form.querySelector('.download--filename:checked').value)
     }
 
-    function download (file, fileName) {
+    function downloadFile (filePath) {
+      axios.get(filePath, { responseType: 'blob' })
+        .then(getBlob)
+        .then(function (blob) {
+          const fileName = basename(filePath)
+
+          const msSaveBlobOr = partial(
+            iif,
+            function () { return navigator.msSaveBlob },
+            function (blob) { navigator.msSaveBlob(blob, fileName) }) // IE11 and Edge 12-18
+
+          const saveObjectUrlOrDataUrl = iif(
+            function () { return URL && URL.createObjectURL },
+            function (readerBlob) { // Chrome and Firefox
+              const blob = readerBlob.blob
+              const url = URL.createObjectURL(blob)
+
+              saveFile(url, fileName)
+              URL.revokeObjectURL(url)
+            },
+            function (readerBlob) {
+              const reader = readerBlob.reader
+              const url = reader.result
+
+              saveFile(url, fileName)
+            }
+          )
+
+          const save = msSaveBlobOr(function (blob) {
+            const reader = new FileReader
+            reader.onloadend = saveObjectUrlOrDataUrl({
+              reader: reader,
+              blob: blob,
+              fileName: fileName
+            })
+            reader.readAsDataURL(blob)
+          })
+
+          save(blob)
+        })
+    }
+
+    function saveFile (file, fileName) {
       const a = document.createElement("a")
       a.href = file
       a.style.display = 'none'
+      a.setAttribute('download', 'fileName')
       a.download = fileName
-      a.setAttribute('download', 'download')
 
       document.body.appendChild(a)
 
@@ -85,6 +93,61 @@
 
       a.parentNode.removeChild(a)
     }
+
+    function partial (f) {
+      const xs = Array.prototype.slice.call(arguments, 1)
+      const x = xs.shift()
+      return x == null
+        ? f
+        : partial.apply(null, [f.bind(null, x)].concat(xs))
+    }
+
+    function dot (property, object) {
+      return object[property]
+    }
+
+    function iif (expression, truePart, falsePart) {
+      return function (argument) {
+        return expression (argument) ? truePart (argument) : falsePart (argument)
+      }
+    }
+
+    function basename (path) {
+      const match = path.match(/\/?([^\/]+)$/)
+      return match ? match[1] : ''
+    }
+
+/* #region old
+if (navigator.msSaveBlob) { // IE11 and Edge 17-
+  navigator.msSaveBlob(blob, fileName)
+} else { // every other browser
+  const reader = new FileReader()
+  reader.onloadend = () => {
+    let url
+
+    switch (type) {
+      case 'createObjectURL':
+        url = window.URL.createObjectURL(blob)
+        break
+      case 'readAsDataURL':
+      default:
+        url = reader.result;
+    }
+
+    download(url, fileName)
+
+    if (type === 'createObjectURL') {
+      window.URL.revokeObjectURL(url)
+    }
+  }
+
+  if (type === 'readAsText') {
+    reader.readAsText(blob)
+  } else {
+    reader.readAsDataURL(blob)
+  }
+}
+#endregion */
   </script>
 </body>
 </html>
