use CDN for axios instead of npm module

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <input type="submit" class="download--button" value="Save PDF">
   </form>
 
-  <script src="node_modules/axios/dist/axios.min.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script>
     'use strict'
 
