show errors on iOS

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
   </section>
 
   <script>
+    window.addEventListener('error', alert)
+
     document
       .querySelectorAll('.support')
       .forEach(function (element) {
