querySelectorAll output does not have forEach on iOS 9.3

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
   </section>
 
   <script>
-    document
-      .querySelectorAll('.support')
-      .forEach(function (element) {
+    Array.prototype.forEach.call(
+      document.querySelectorAll('.support'),
+      function (element) {
         test(element, element.dataset.testName)
       })
 
