--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
       switch (testName) {
         case 'createObjectURL':
-          success = URL && URL.createObjectURL
+          success = URL && URL.createObjectURL && navigator.userAgent.indexOf('Safari') === -1
           break
         case 'readAsDataURL':
           var reader = new FileReader
@@ -119,7 +119,7 @@
             function (blob) { navigator.msSaveBlob(blob, fileName) }) // IE11 and Edge 12-18
 
           var saveObjectUrlOrDataUrl = iif(
-            function () { return URL && URL.createObjectURL },
+            function () { return URL && URL.createObjectURL && navigator.userAgent.indexOf('Safari') === -1 },
             function (readerBlob) { // Chrome and Firefox
               var blob = readerBlob.blob
               var url = URL.createObjectURL(blob)
