--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
           var saveObjectUrlOrDataUrl = iif(
             function () {
-              const userAgent = navigator.userAgent
+              var userAgent = navigator.userAgent
               return URL && URL.createObjectURL
                 && userAgent.indexOf('Chrom') === -1 && userAgent.indexOf('Safari') !== -1
             },
