test iBooks protocol III

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     <hr>
 
     <input type="submit" class="download--button" value="Save PDF">
-    <a href="ibooks://example.48K.pdf">iBooks</a>
+    <a href="itms-bookss://dotnetcarpenter.github.io/FileReader_Chrome/example.48K.pdf">iBooks</a>
+    <a href="itms-bookss://example.48K.pdf">iBooks</a>
   </form>
 
   <section>
